# comfy-dynamic-widgets

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
comfy_dynamic_widgets/: __init__.py  generator.py  scanner.py
comfy_dynamic_widgets/web/js/: dynamic_widgets.js
comfyui_dynamic_widgets/: __init__.py  generator.py  scanner.py
web/js/: dynamic_widgets.js
