[project]
name = "comfy-dynamic-widgets"
version = "0.1.4"
description = "Dynamic widget visibility for ComfyUI nodes via simple metadata"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andrea Pozzetti"}
]
keywords = ["comfyui", "widgets", "dynamic", "visibility", "conditional"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/comfy-dynamic-widgets"
Repository = "https://github.com/PozzettiAndrea/comfy-dynamic-widgets"
Issues = "https://github.com/PozzettiAndrea/comfy-dynamic-widgets/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comfy_dynamic_widgets"]

[tool.ruff]
line-length = 100
target-version = "py310"
